# remarkable-sudoku

./: .dockerignore  .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  run
.mirror-cache/goMarkableStream/: latest-release.json
build-host-app/: CMakeCache.txt  DartConfiguration.tcl
build-tests-ninja/: CMakeCache.txt
docs/: xochitl-low-latency-drawing.md  xochitl-ui-debugging.md
scripts/: build-rm2.sh  install-appload.sh  install-xovi-launcher.sh  mirror-rm2.py  provision-sudoku-document.sh  run-rm2.sh  screenshot-rm2.sh  trace-rm2-low-latency.sh  xovi-post-update.sh
src/: main.cpp
src/app/: sudoku_app_controller.cpp  sudoku_app_controller.h
src/debug/: qml_object_inspector.cpp  qml_object_inspector.h
src/game/: sudoku_app_state_store.cpp  sudoku_app_state_store.h  sudoku_board.cpp  sudoku_board.h  sudoku_game.cpp  sudoku_game.h  sudoku_generator.cpp  sudoku_generator.h  sudoku_puzzle.h  sudoku_session_store.cpp  sudoku_session_store.h
src/input/: tablet_mouse_bridge.cpp  tablet_mouse_bridge.h
src/qml/: Main.qml  SudokuAppView.qml  SudokuMenuView.qml  SudokuView.qml
src/tools/: remarkable_touch_injector.cpp
tests/: sudoku_app_state_store_test.cpp  sudoku_board_test.cpp  sudoku_qml_contract_test.cpp  sudoku_session_store_test.cpp
xovi/: remarkable_sudoku_xovi.cpp
xovi/qml/: AppsDrawer.qml  InkDebugAppView.qml  SudokuPageHost.qml
xovi/remarkable-sudoku-sidebar/: sidebar.qmd
